apps/applicant-api/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: applicant-api
  labels:
    app.kubernetes.io/name: applicant-api
    app.kubernetes.io/part-of: spark
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: applicant-api
  template:
    metadata:
      labels:
        app.kubernetes.io/name: applicant-api
        app.kubernetes.io/part-of: spark
    spec:
      containers:
        - name: applicant-api
          image: ghcr.io/spark-harness/applicant-api:replace-me
          ports:
            - name: http
              containerPort: 8080
          readinessProbe:
            httpGet:
              path: /actuator/health/readiness
              port: http
          livenessProbe:
            httpGet:
              path: /actuator/health/liveness
              port: http
