apps/applicant-api/base/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: applicant-api-ingress
  labels:
    app.kubernetes.io/name: applicant-api
    app.kubernetes.io/part-of: lendora
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: applicant-api
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: lendora-sta-fides-bff
      ports:
        - protocol: TCP
          port: 9090
        - protocol: TCP
          port: 80
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: lendora-sta-consul
      ports:
        - protocol: TCP
          port: 8080
